--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/animate.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./animate.css">
 
     <title>TOM N TOMS</title>
 
@@ -48,7 +48,7 @@
     <header>
         <div class="top-bar">
             <div class="logo-box">
-                <a href="#"><img src="./images/logo.png" alt="탐탐로고"></a>
+                <a href="#"><img src="images/logo.png" alt="탐탐로고"></a>
             </div>
             <div class="info-menu">
                 <ul class="row">
@@ -63,13 +63,13 @@
                 <span></span>
                 <span></span>
             </div>
-            <div class="shopbag"><img src="./images/tomntoms_mall_i.png" alt="쇼핑백_아이콘"></div>
+            <div class="shopbag"><img src="images/tomntoms_mall_i.png" alt="쇼핑백_아이콘"></div>
             <!--위치 변경-->
             <div class="layer-bg"></div>
             <div class="nav-tabile">
                 <div class="toggle-menu">
                     <ul>
-                        <li><img src="./images/nav_logo.svg" alt="토글로고"></li>
+                        <li><img src="images/nav_logo.svg" alt="토글로고"></li>
                         <li class="li"><a href="#">MENU <div class="arrow"><span><i class="fas fa-chevron-down"></i></span>
                                     <span><i class="fas fa-chevron-up"></i></span>
                                 </div></a>
@@ -130,7 +130,7 @@
                         <span><a href="#">CHINESE</a></span>
                     </p>
                 </div>
-                <div class="nav-off-btn"><img src="./images/nav_btn_off.png" alt="닫기"></div>
+                <div class="nav-off-btn"><img src="images/nav_btn_off.png" alt="닫기"></div>
             </div>
             <div class="main-menu">
                 <ul class="row for-relative">
@@ -231,16 +231,16 @@
     <div class="mob-total-wrap">
         <div class="mob-slide-wrap">
             <div class="mob-slide-contents">
-                <a href="#"><img src="./images/mobile_slide1.jpg" alt="mob_슬라이드1"></a>
+                <a href="#"><img src="images/mobile_slide1.jpg" alt="mob_슬라이드1"></a>
             </div>
             <div class="mob-slide-contents">
-                <a href="#"><img src="./images/mobile_slide2.jpg" alt="mob_슬라이드2"></a>
+                <a href="#"><img src="images/mobile_slide2.jpg" alt="mob_슬라이드2"></a>
             </div>
             <div class="mob-slide-contents">
-                <a href="#"><img src="./images/mobile_slide3.jpg" alt="mob_슬라이드3"></a>
+                <a href="#"><img src="images/mobile_slide3.jpg" alt="mob_슬라이드3"></a>
             </div>
             <div class="mob-slide-contents">
-                <a href="#"><img src="./images/mobile_slide4.jpg" alt="mob_슬라이드4"></a>
+                <a href="#"><img src="images/mobile_slide4.jpg" alt="mob_슬라이드4"></a>
             </div>
         </div>
     </div>
@@ -250,16 +250,16 @@
         <div class="mainSlide-wrap">
 
             <div class="slide-contents">
-                <a href="#"><img src="./images/slide1.jpg" alt="메인슬라이드1"></a>
+                <a href="#"><img src="images/slide1.jpg" alt="메인슬라이드1"></a>
             </div>
             <div class="slide-contents">
-                <a href="#"><img src="./images/slide2.jpg" alt="메인슬라이드2"></a>
+                <a href="#"><img src="images/slide2.jpg" alt="메인슬라이드2"></a>
             </div>
             <div class="slide-contents">
-                <a href="#"><img src="./images/slide3.jpg" alt="메인슬라이드3"></a>
+                <a href="#"><img src="images/slide3.jpg" alt="메인슬라이드3"></a>
             </div>
             <div class="slide-contents">
-                <a href="#"><img src="./images/slide4.jpg" alt="메인슬라이드4"></a>
+                <a href="#"><img src="images/slide4.jpg" alt="메인슬라이드4"></a>
             </div>
 
 
@@ -362,25 +362,25 @@
         </div>
         <div class="menu-imgSlide-wrap menu-imgSlide-wrap-1">
             <div class="menu-img-txt">
-                <a href="#"><img src="./images/menu_slide1.jpg" alt="메뉴_슬릭슬라이드1">
+                <a href="#"><img src="images/menu_slide1.jpg" alt="메뉴_슬릭슬라이드1">
                     <div class="hover-box"></div>
                 </a>
                 <p>솔티드카라멜 레볼루션 3종</p>
             </div>
             <div class="menu-img-txt">
-                <a href="#"><img src="./images/menu_slide2.jpg" alt="메뉴_슬릭슬라이드2">
+                <a href="#"><img src="images/menu_slide2.jpg" alt="메뉴_슬릭슬라이드2">
                     <div class="hover-box"></div>
                 </a>
                 <p>베리나이스 레볼루션 3종</p>
             </div>
             <div class="menu-img-txt">
-                <a href="#"><img src="./images/menu_slide3.jpg" alt="메뉴_슬릭슬라이드3">
+                <a href="#"><img src="images/menu_slide3.jpg" alt="메뉴_슬릭슬라이드3">
                     <div class="hover-box"></div>
                 </a>
                 <p>레드뱅쇼</p>
             </div>
             <div class="menu-img-txt">
-                <a href="#"><img src="./images/menu_slide4.jpg" alt="메뉴_슬릭슬라이드4">
+                <a href="#"><img src="images/menu_slide4.jpg" alt="메뉴_슬릭슬라이드4">
                     <div class="hover-box"></div>
                 </a>
                 <p>탐의보감 3종</p>
@@ -391,7 +391,7 @@
     <div class="store_img_wrap">
         <div class="store_img">
             <p><span class="wow fadeInUp">대한민국 대표 스페셜티 커피브랜드</span>
-                <span class="wow fadeInUp"> <img src="./images/tomntoms_tit_bold.svg" alt="탐탐_텍스트_이미지"></span>
+                <span class="wow fadeInUp"> <img src="images/tomntoms_tit_bold.svg" alt="탐탐_텍스트_이미지"></span>
                 <span class="wow fadeInUp">탐앤탐스는 오랜 노하우로 국내외 커피 시장을 선도하며 스페셜티 커피와 갓 구운 따뜻한 프레즐, 문화가 융합된 특별한 공간으로 지금 대한민국을 비롯해 전 세계에서 사랑받는 브랜드입니다.</span>
             </p>
             <p><span class="wow fadeInUp"><a href="#">가맹문의</a></span>
@@ -403,7 +403,7 @@
 
         <div class="m_store_img">
             <p><span class="wow fadeInUp">대한민국 대표 스페셜티 커피브랜드</span>
-                <span class="wow fadeInUp"> <img src="./images/tomntoms_tit_bold.svg" alt="mob_탐탐_텍스트_이미지"></span>
+                <span class="wow fadeInUp"> <img src="images/tomntoms_tit_bold.svg" alt="mob_탐탐_텍스트_이미지"></span>
                 <span class="wow fadeInUp">탐앤탐스는 오랜 노하우로 국내외 커피 시장을 선도하며<br>스페셜티 커피와 갓 구운 따뜻한 프레즐, 문화가 융합된 특별한 공간으로<br>지금 대한민국을 비롯해 전 세계에서 사랑받는 브랜드입니다.</span>
             </p>
             <p><span class="wow fadeInUp"><a href="#">가맹문의</a></span>
@@ -434,31 +434,31 @@
 
         <div class="menu-imgSlide-wrap menu-imgSlide-wrap-2">
             <div class="menu-img-txt">
-                <a href="#"><img src="./images/mild_blend.jpg" alt="구성상품_슬릭슬라이드1">
+                <a href="#"><img src="images/mild_blend.jpg" alt="구성상품_슬릭슬라이드1">
                     <div class="hover-box"></div>
                 </a>
                 <p>액상커피 마일드 블렌드 세트</p>
             </div>
             <div class="menu-img-txt">
-                <a href="#"><img src="./images/signature_set.jpg" alt="구성상품_슬릭슬라이드2">
+                <a href="#"><img src="images/signature_set.jpg" alt="구성상품_슬릭슬라이드2">
                     <div class="hover-box"></div>
                 </a>
                 <p>시그니처 드립커피 세트</p>
             </div>
             <div class="menu-img-txt">
-                <a href="#"><img src="./images/mug_set.jpg" alt="구성상품_슬릭슬라이드3">
+                <a href="#"><img src="images/mug_set.jpg" alt="구성상품_슬릭슬라이드3">
                     <div class="hover-box"></div>
                 </a>
                 <p>꼰데라떼&머그 텀블러 세트</p>
             </div>
             <div class="menu-img-txt">
-                <a href="#"><img src="./images/penny_house.jpg" alt="구성상품_슬릭슬라이드4">
+                <a href="#"><img src="images/penny_house.jpg" alt="구성상품_슬릭슬라이드4">
                     <div class="hover-box"></div>
                 </a>
                 <p>페니하우스&텀블러 세트</p>
             </div>
             <div class="menu-img-txt">
-                <a href="#"><img src="./images/tea_set.jpg" alt="구성상품_슬릭슬라이드5">
+                <a href="#"><img src="images/tea_set.jpg" alt="구성상품_슬릭슬라이드5">
                     <div class="hover-box"></div>
                 </a>
                 <p>드립커피&티 세트</p>
@@ -472,16 +472,16 @@
             <p>TOM N TOMS</p>
         </div>
         <div class="sns-img-wrap row">
-            <div class="sns-img-box cell"><a href="#"><img src="./images/sns1.jpg" alt="sns1"></a></div>
-            <div class="sns-img-box cell"><a href="#"><img src="./images/sns2.jpg" alt="sns2"></a></div>
-            <div class="sns-img-box cell"><a href="#"><img src="./images/sns3.jpg" alt="sns3"></a></div>
-            <div class="sns-img-box cell"><a href="#"><img src="./images/sns4.jpg" alt="sns4"></a></div>
-            <div class="sns-img-box cell"><a href="#"><img src="./images/sns5.jpg" alt="sns5"></a></div>
-            <div class="sns-img-box cell"><a href="#"><img src="./images/sns6.jpg" alt="sns6"></a></div>
-            <div class="sns-img-box cell"><a href="#"><img src="./images/sns7.jpg" alt="sns7"></a></div>
-            <div class="sns-img-box cell"><a href="#"><img src="./images/sns8.jpg" alt="sns8"></a></div>
-            <div class="sns-img-box cell"><a href="#"><img src="./images/sns9.jpg" alt="sns9"></a></div>
-            <div class="sns-img-box cell"><a href="#"><img src="./images/sns10.jpg" alt="sns10"></a></div>
+            <div class="sns-img-box cell"><a href="#"><img src="images/sns1.jpg" alt="sns1"></a></div>
+            <div class="sns-img-box cell"><a href="#"><img src="images/sns2.jpg" alt="sns2"></a></div>
+            <div class="sns-img-box cell"><a href="#"><img src="images/sns3.jpg" alt="sns3"></a></div>
+            <div class="sns-img-box cell"><a href="#"><img src="images/sns4.jpg" alt="sns4"></a></div>
+            <div class="sns-img-box cell"><a href="#"><img src="images/sns5.jpg" alt="sns5"></a></div>
+            <div class="sns-img-box cell"><a href="#"><img src="images/sns6.jpg" alt="sns6"></a></div>
+            <div class="sns-img-box cell"><a href="#"><img src="images/sns7.jpg" alt="sns7"></a></div>
+            <div class="sns-img-box cell"><a href="#"><img src="images/sns8.jpg" alt="sns8"></a></div>
+            <div class="sns-img-box cell"><a href="#"><img src="images/sns9.jpg" alt="sns9"></a></div>
+            <div class="sns-img-box cell"><a href="#"><img src="images/sns10.jpg" alt="sns10"></a></div>
         </div>
     </div>
 
@@ -524,10 +524,10 @@
                 <p>Follow us</p>
 
                 <p class="footer-info-icon">
-                    <a href="#"><img src="./images/insta_icon.png" alt="insta_아이콘"></a>
-                    <a href="#"><img src="./images/facebook_icon.png" alt="facebook_아이콘"></a>
-                    <a href="#"><img src="./images/youtube_icon.png" alt="youtube_아이콘"></a>
-                    <a href="#"><img src="./images/blog_icon.png" alt="blog_아이콘"></a>
+                    <a href="#"><img src="images/insta_icon.png" alt="insta_아이콘"></a>
+                    <a href="#"><img src="images/facebook_icon.png" alt="facebook_아이콘"></a>
+                    <a href="#"><img src="images/youtube_icon.png" alt="youtube_아이콘"></a>
+                    <a href="#"><img src="images/blog_icon.png" alt="blog_아이콘"></a>
                 </p>
 
             </div>
@@ -553,7 +553,7 @@
             <div class="close-btn"><i class="fas fa-times"></i></div>
             <div class="banner-img">
                 <a href="#">
-                    <img src="./images/banner_img.png" alt="배너">
+                    <img src="images/banner_img.png" alt="배너">
                 </a>
             </div>
         </div>
