--- a/index.html
+++ b/index.html
@@ -4,30 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./animate.css">
 
     <title>TOM N TOMS</title>
 
-    <link rel="stylesheet" href="./css/style.css">
+      <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./animate.css">
     <script src="script/jquery-1.12.3.js"></script>
     <script src="script/script.js"></script>
 
 
-    <!-- jQuery CDN -->
-    <!--    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>-->
-    <!--<script src="https://code.jquery.com/jquery-3.5.1.js" ></script>-->
-
-
-    <!--slick slider 필요 태그 st-->
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick-theme.min.css">
-
-    <!-- slick Carousel CDN -->
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
-    <!--slick slider 필요 태그 en-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+    <!--slick slider-->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick-theme.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
     <!-- 폰트어썸 -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
@@ -35,13 +24,11 @@
     <!-- 폰트패밀리 링크 -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@500&family=Manrope:wght@300&family=Nanum+Myeongjo&family=Noto+Sans+KR:wght@100&family=Poppins:wght@200&family=Raleway:wght@900&family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <script src="wow.min.js"></script>
+    <script src="./wow.min.js"></script>
     <script>
         new WOW().init();
     </script>
@@ -64,13 +51,13 @@
                 <span></span>
             </div>
             <div class="shopbag"><img src="images/tomntoms_mall_i.png" alt="쇼핑백_아이콘"></div>
-            <!--위치 변경-->
+               
             <div class="layer-bg"></div>
             <div class="nav-tabile">
                 <div class="toggle-menu">
                     <ul>
-                        <li><img src="images/nav_logo.svg" alt="토글로고"></li>
-                        <li class="li"><a href="#">MENU <div class="arrow"><span><i class="fas fa-chevron-down"></i></span>
+                        <li><img src="images/nav_logo.svg" alt="탐탐로고"></li>
+                        <li class="li"><a href="#">MENU<div class="arrow"><span><i class="fas fa-chevron-down"></i></span>
                                     <span><i class="fas fa-chevron-up"></i></span>
                                 </div></a>
 
@@ -231,16 +218,16 @@
     <div class="mob-total-wrap">
         <div class="mob-slide-wrap">
             <div class="mob-slide-contents">
-                <a href="#"><img src="images/mobile_slide1.jpg" alt="mob_슬라이드1"></a>
+                <a href="#"><img src="images/mobile_slide1.jpg" alt="신메뉴 마시고 이벤트에 참여해보세요"></a>
             </div>
             <div class="mob-slide-contents">
-                <a href="#"><img src="images/mobile_slide2.jpg" alt="mob_슬라이드2"></a>
+                <a href="#"><img src="images/mobile_slide2.jpg" alt="레볼루션 음료 1잔 구매 시 드링킹자 무료증정"></a>
             </div>
             <div class="mob-slide-contents">
-                <a href="#"><img src="images/mobile_slide3.jpg" alt="mob_슬라이드3"></a>
+                <a href="#"><img src="images/mobile_slide3.jpg" alt="오징어먹물 프레즐"></a>
             </div>
             <div class="mob-slide-contents">
-                <a href="#"><img src="images/mobile_slide4.jpg" alt="mob_슬라이드4"></a>
+                <a href="#"><img src="images/mobile_slide4.jpg" alt="탐앤탐스 컬쳐카페 프로젝트 공모전"></a>
             </div>
         </div>
     </div>
@@ -250,16 +237,16 @@
         <div class="mainSlide-wrap">
 
             <div class="slide-contents">
-                <a href="#"><img src="images/slide1.jpg" alt="메인슬라이드1"></a>
+                <a href="#"><img src="images/slide1.jpg" alt="신메뉴 마시고 이벤트에 참여해보세요"></a>
             </div>
             <div class="slide-contents">
-                <a href="#"><img src="images/slide2.jpg" alt="메인슬라이드2"></a>
+                <a href="#"><img src="images/slide2.jpg" alt="레볼루션 음료 1잔 구매 시 드링킹자 무료증정"></a>
             </div>
             <div class="slide-contents">
-                <a href="#"><img src="images/slide3.jpg" alt="메인슬라이드3"></a>
+                <a href="#"><img src="images/slide3.jpg" alt="오징어먹물 프레즐"></a>
             </div>
             <div class="slide-contents">
-                <a href="#"><img src="images/slide4.jpg" alt="메인슬라이드4"></a>
+                <a href="#"><img src="images/slide4.jpg" alt="탐앤탐스 컬쳐카페 프로젝트 공모전"></a>
             </div>
 
 
@@ -362,25 +349,25 @@
         </div>
         <div class="menu-imgSlide-wrap menu-imgSlide-wrap-1">
             <div class="menu-img-txt">
-                <a href="#"><img src="images/menu_slide1.jpg" alt="메뉴_슬릭슬라이드1">
+                <a href="#"><img src="images/menu_slide1.jpg" alt="솔티드카라멜 레볼루션 3종">
                     <div class="hover-box"></div>
                 </a>
                 <p>솔티드카라멜 레볼루션 3종</p>
             </div>
             <div class="menu-img-txt">
-                <a href="#"><img src="images/menu_slide2.jpg" alt="메뉴_슬릭슬라이드2">
+                <a href="#"><img src="images/menu_slide2.jpg" alt="베리나이스 레볼루션 3종">
                     <div class="hover-box"></div>
                 </a>
                 <p>베리나이스 레볼루션 3종</p>
             </div>
             <div class="menu-img-txt">
-                <a href="#"><img src="images/menu_slide3.jpg" alt="메뉴_슬릭슬라이드3">
+                <a href="#"><img src="images/menu_slide3.jpg" alt="레드뱅쇼">
                     <div class="hover-box"></div>
                 </a>
                 <p>레드뱅쇼</p>
             </div>
             <div class="menu-img-txt">
-                <a href="#"><img src="images/menu_slide4.jpg" alt="메뉴_슬릭슬라이드4">
+                <a href="#"><img src="images/menu_slide4.jpg" alt="탐의보감 3종">
                     <div class="hover-box"></div>
                 </a>
                 <p>탐의보감 3종</p>
@@ -391,7 +378,7 @@
     <div class="store_img_wrap">
         <div class="store_img">
             <p><span class="wow fadeInUp">대한민국 대표 스페셜티 커피브랜드</span>
-                <span class="wow fadeInUp"> <img src="images/tomntoms_tit_bold.svg" alt="탐탐_텍스트_이미지"></span>
+                <span class="wow fadeInUp"> <img src="images/tomntoms_tit_bold.svg" alt="매장 배경 이미지"></span>
                 <span class="wow fadeInUp">탐앤탐스는 오랜 노하우로 국내외 커피 시장을 선도하며 스페셜티 커피와 갓 구운 따뜻한 프레즐, 문화가 융합된 특별한 공간으로 지금 대한민국을 비롯해 전 세계에서 사랑받는 브랜드입니다.</span>
             </p>
             <p><span class="wow fadeInUp"><a href="#">가맹문의</a></span>
@@ -403,7 +390,7 @@
 
         <div class="m_store_img">
             <p><span class="wow fadeInUp">대한민국 대표 스페셜티 커피브랜드</span>
-                <span class="wow fadeInUp"> <img src="images/tomntoms_tit_bold.svg" alt="mob_탐탐_텍스트_이미지"></span>
+                <span class="wow fadeInUp"> <img src="images/tomntoms_tit_bold.svg" alt="매장 배경 이미지"></span>
                 <span class="wow fadeInUp">탐앤탐스는 오랜 노하우로 국내외 커피 시장을 선도하며<br>스페셜티 커피와 갓 구운 따뜻한 프레즐, 문화가 융합된 특별한 공간으로<br>지금 대한민국을 비롯해 전 세계에서 사랑받는 브랜드입니다.</span>
             </p>
             <p><span class="wow fadeInUp"><a href="#">가맹문의</a></span>
@@ -434,31 +421,31 @@
 
         <div class="menu-imgSlide-wrap menu-imgSlide-wrap-2">
             <div class="menu-img-txt">
-                <a href="#"><img src="images/mild_blend.jpg" alt="구성상품_슬릭슬라이드1">
+                <a href="#"><img src="images/mild_blend.jpg" alt="액상커피 마일드 블렌드 세트">
                     <div class="hover-box"></div>
                 </a>
                 <p>액상커피 마일드 블렌드 세트</p>
             </div>
             <div class="menu-img-txt">
-                <a href="#"><img src="images/signature_set.jpg" alt="구성상품_슬릭슬라이드2">
+                <a href="#"><img src="images/signature_set.jpg" alt="시그니처 드립커피 세트">
                     <div class="hover-box"></div>
                 </a>
                 <p>시그니처 드립커피 세트</p>
             </div>
             <div class="menu-img-txt">
-                <a href="#"><img src="images/mug_set.jpg" alt="구성상품_슬릭슬라이드3">
+                <a href="#"><img src="images/mug_set.jpg" alt="꼰데라떼&머그 텀블러 세트">
                     <div class="hover-box"></div>
                 </a>
                 <p>꼰데라떼&머그 텀블러 세트</p>
             </div>
             <div class="menu-img-txt">
-                <a href="#"><img src="images/penny_house.jpg" alt="구성상품_슬릭슬라이드4">
+                <a href="#"><img src="images/penny_house.jpg" alt="페니하우스&텀블러 세트">
                     <div class="hover-box"></div>
                 </a>
                 <p>페니하우스&텀블러 세트</p>
             </div>
             <div class="menu-img-txt">
-                <a href="#"><img src="images/tea_set.jpg" alt="구성상품_슬릭슬라이드5">
+                <a href="#"><img src="images/tea_set.jpg" alt="드립커피&티 세트">
                     <div class="hover-box"></div>
                 </a>
                 <p>드립커피&티 세트</p>
@@ -524,18 +511,15 @@
                 <p>Follow us</p>
 
                 <p class="footer-info-icon">
-                    <a href="#"><img src="images/insta_icon.png" alt="insta_아이콘"></a>
-                    <a href="#"><img src="images/facebook_icon.png" alt="facebook_아이콘"></a>
-                    <a href="#"><img src="images/youtube_icon.png" alt="youtube_아이콘"></a>
-                    <a href="#"><img src="images/blog_icon.png" alt="blog_아이콘"></a>
+                    <a href="#"><img src="images/insta_icon.png" alt="인스타그램 아이콘"></a>
+                    <a href="#"><img src="images/facebook_icon.png" alt="페이스북 아이콘"></a>
+                    <a href="#"><img src="images/youtube_icon.png" alt="유투브 아이콘"></a>
+                    <a href="#"><img src="images/blog_icon.png" alt="블로그 아이콘"></a>
                 </p>
 
             </div>
         </div>
     </div>
-
-
-
 
 
     <!--스크린에 떠있는 것-->
@@ -553,7 +537,7 @@
             <div class="close-btn"><i class="fas fa-times"></i></div>
             <div class="banner-img">
                 <a href="#">
-                    <img src="images/banner_img.png" alt="배너">
+                    <img src="images/banner_img.png" alt="온라인구매는 탐앤탐스몰_배너">
                 </a>
             </div>
         </div>
